@@ -140,11 +140,12 @@ machine(struct mne *mp)
                 break;
         }
 
-        case S_SET1:
+        case S_SET1: {
                 struct inst io = {0x0F00, 0x1F};
                 struct inst m = {0x0301, 0x1F};
                 ebitn(io, m, /*N offset*/5);
                 break;
+        }
 
         case S_SET0: {
                 struct inst io = {0x0E00, 0x1F};
@@ -163,11 +164,12 @@ machine(struct mne *mp)
                 break;
         }
 
-        case S_T1SN:
+        case S_T1SN: {
                 struct inst io = {0x0D00, 0x1F};
                 struct inst m = {0x0201, 0x1F};
                 ebitn(io, m, /*N offset*/5);
                 break;
+        }
 
         case S_T0SN: {
                 struct inst io = {0x0C00, 0x1F};
